--- a/calculator.html
+++ b/calculator.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>javascript calculator</title>
-	<link rel="stylesheet" type="text/css" href="calculator.css">
+	<link rel="stylesheet" type="text/css" href="/Users/E-sha/calculator/stylesheets/calculator.css">
 </head>
 <body>
 	<div id="calc">
 	<div class="output">0</div>
 	<div class="firstLine"> 
+		<span class="AC">AC</span>
 		<span class="C">C</span>
-		<span class="fuhao">+/-</span>
-		<span class="operator dot">.</span>
+		<span class="dot">.</span>
 		<span class="operator add">+</span>
 		</div>
 		<div class="secondLine">
@@ -38,6 +38,6 @@
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="calculator.js"></script>
+	<script type="text/javascript" src="/Users/E-sha/calculator/javascripts/calculator1102.js"></script>
 </body>
 </html>
