--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>javascript calculator</title>
-	<link rel="stylesheet" type="text/css" href="/Users/E-sha/calculator/stylesheets/calculator.css">
+	<link rel="stylesheet" type="text/css" href="calculator.css">
 </head>
 <body>
 	<div id="calc">
@@ -38,6 +38,6 @@
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="/Users/E-sha/calculator/javascripts/calculator1102.js"></script>
+	<script type="text/javascript" src="calculator1102.js"></script>
 </body>
 </html>
